<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/logout_alert"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:background="@drawable/shape"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    >

    <TextView
        android:id="@+id/logout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/logout_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/logout_cancel"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/teal_200"
        />

    <Button
        android:id="@+id/logout_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/logout_ok"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/teal_200"
        />

</androidx.constraintlayout.widget.ConstraintLayout>