<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".authentication.LoginBaseActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_logo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:src="@drawable/union_1"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextview"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextview"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextview">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextview"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Signup_SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="40dp"
        app:cornerRadius="20dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:backgroundTint="#C83737"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_GetOtp"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextview"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_GetOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="10dp"
        app:cornerRadius="20dp"
        android:textAllCaps="false"
        android:text="Click here to OTP Login"
        android:backgroundTint="#C83737"
        app:layout_constraintStart_toEndOf="@id/btn_Signup_SignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextview"/>

    <TextView
        android:id="@+id/txt_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginStart="40dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_Signup_SignIn"/>

    <TextView
        android:id="@+id/signIn_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="13dp"
        android:layout_marginStart="15dp"
        app:cornerRadius="20dp"
        android:text="@string/sign_in"
        android:textColor="#B30404"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toEndOf="@id/txt_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_Signup_SignIn"
        android:layout_marginEnd="50dp"/>
    <TextView
        android:id="@+id/signUp_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="13dp"
        android:layout_marginStart="20dp"
        app:cornerRadius="20dp"
        android:text="@string/register_here"
        android:visibility="gone"
        android:textColor="#B30404"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toEndOf="@id/txt_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_Signup_SignIn"
        android:layout_marginEnd="45dp"/>

    <TextView
        android:id="@+id/or_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/txt_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"/>


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/google_signIn_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/google_signin"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or_view"
        app:layout_constraintBottom_toTopOf="@id/facebook_signIn"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/facebook_signIn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintCircleRadius="20dp"
        android:background="@drawable/fb_signin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/google_signIn_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>