<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/player_settings"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:padding="8dp"
        android:visibility="gone"
        android:textColor="@color/white"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/exo_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/player_previous"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/exo_rew"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_skip_previous_24" />

    <ImageView
        android:id="@+id/exo_rew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/player_rewind"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exo_prev"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view"
        app:srcCompat="@drawable/ic_baseline_replay_10_24" />

    <ImageView
        android:id="@+id/exo_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/player_play"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_play_arrow_24" />

    <ImageView
        android:id="@+id/exo_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/player_pause"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_pause_24" />

    <View
        android:id="@+id/view"
        android:layout_width="18dp"
        android:layout_height="16dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/exo_fwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/player_forward"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/exo_next"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_forward_10_24" />

    <ImageView
        android:id="@+id/exo_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="30dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/player_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exo_fwd"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_skip_next_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="@+id/constraint_duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
            <com.google.android.exoplayer2.ui.DefaultTimeBar
                android:id="@+id/exo_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                app:played_color="#E40B0B"
                app:scrubber_drawable="@drawable/ic_seek_thumb"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
    </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_duration"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/exo_play_footer"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/player_play"
                android:scaleType="center"
                android:layout_marginStart="15dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_play_arrow_24" />
            <ImageView
                android:id="@+id/exo_pause_footer"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/player_pause"
                android:scaleType="center"
                android:layout_marginStart="15dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_baseline_pause_24" />

            <TextView
                android:id="@id/exo_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/exo_play_footer"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/exo_position_separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/exo_position"
                android:includeFontPadding="true"
                android:text="/"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/exo_position"
                app:layout_constraintStart_toEndOf="@+id/exo_position" />

            <TextView
                android:id="@id/exo_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/exo_position_separator"
                android:includeFontPadding="true"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/exo_position_separator"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/exo_fullscreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/player_fullscreen"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:src="@drawable/ic_baseline_fullscreen_24"
                android:textColor="#ffffff"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/exo_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:contentDescription="@string/player_subtitle"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:visibility="visible"
                android:src="@drawable/ic_baseline_subtitles_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/exo_fullscreen"
                app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>